--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.1",
+    "express-validator": "^6.12.1",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "socket.io": "^4.1.3"
